feat: update ESLint configuration and scripts
- Added "debug/**" to ignored patterns in ESLint config.
- Introduced a new rule to warn against empty catch blocks.
- Improved error messages for variable declaration rules.
- Updated build script in package.json to use Vite for building.
- Modified Vite configuration to support library bundling with TypeScript.
- Added documentation comments to Vite and Vitest configuration files.

--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   },
   "sideEffects": false,
   "scripts": {
-    "build": "tsup src/index.ts --format esm --dts --minify --sourcemap",
-    "dev": "tsup src/index.ts --format esm --dts --watch",
+    "build": "vite build",
     "clean": "rimraf dist",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
