feat: add public API tests for unified client basic calls
- Introduced a new test suite for the public API of the VectorDB client, ensuring basic CRUD operations and unified find/findMany functionality.
- Implemented tests for client construction, data manipulation, and search capabilities with various options.

refactor: update bulk operations to use RowInput type

- Modified the upsertMany and addMany functions to accept RowInput<TMeta> for better type safety and consistency across the codebase.

feat: create CLI entry point for VectorDB

- Added a new CLI entry point using Ink and React to facilitate command-line interactions with the VectorDB.

chore: remove deprecated cluster and client creation files

- Deleted the cluster.ts and create.ts files as they are no longer needed in the updated architecture.

feat: implement in-memory database operations

- Created a new db.ts file to handle in-memory database operations, providing a clean interface for data manipulation.

refactor: enhance client index operations

- Introduced createIndexOps to centralize persistence helpers and improve the management of indexing and placement.

fix: ensure proper handling of metadata in indexing

- Updated the openIndexing function to ensure metadata is correctly assigned during the indexing process.

test: update file I/O tests to use new client structure

- Refactored file I/O tests to utilize the new connect method for creating database instances, ensuring compatibility with the latest changes.

chore: update TypeScript configuration to include debug files

- Modified tsconfig.json to include debug directory in the compilation process.

build: adjust Vite configuration for library entry points

- Updated vite.config.ts to streamline the build process by consolidating entry points for the library.

docs: update Vitest configuration comments

- Revised comments in vitest.config.ts to reflect the new project name and clarify the purpose of the configuration.

--- a/package.json
+++ b/package.json
@@ -11,13 +11,9 @@
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
     },
-    "./db": {
-      "import": "./dist/db.js",
-      "types": "./dist/db.d.ts"
-    },
-    "./cluster": {
-      "import": "./dist/cluster.js",
-      "types": "./dist/cluster.d.ts"
+    "./client": {
+      "import": "./dist/client.js",
+      "types": "./dist/client.d.ts"
     }
   },
   "packageManager": "bun@1.2.20",
@@ -29,7 +25,8 @@
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
     "typecheck": "tsc -p tsconfig.json --noEmit",
-    "test": "bun test"
+    "test": "bun test",
+    "cli": "bun run src/cli/main.tsx"
   },
   "devDependencies": {
     "@types/node": "^24.3.0",
@@ -49,6 +46,9 @@
   "dependencies": {
     "eslint-plugin-eslint-comments": "^3.2.0",
     "ink": "^6.2.0",
+    "ink-select-input": "^6.2.0",
+    "ink-spinner": "^5.0.0",
+    "ink-text-input": "^6.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   }
