--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,5 @@
     "skipLibCheck": true,
     "types": ["node", "vitest/globals"]
   },
-  "include": ["src/**/*", "spec/**/*"]
+  "include": ["src/**/*", "spec/**/*", "debug/**/*"]
 }
