feat(routing): add route utilities and tests for createRoute and createNestedRoutes
- Implemented createRoute and createNestedRoutes functions for route management.
- Added RoutePath utilities for path manipulation.
- Created tests for route utilities to ensure correct functionality.

feat(router): implement Router component for path-based routing

- Developed Router component to render components based on the current path.
- Added fallback handling for unmatched routes.
- Included NotFound component for better user experience.

refactor(storage): reorganize storage modules and remove obsolete persistence adapters

- Moved persistence logic to a new storage module structure.
- Removed OPFS and S3 persistence adapters due to redundancy.
- Introduced new in-memory and Node.js file system storage implementations.

test(storage): add unit tests for in-memory file I/O operations

- Created tests for memory-based file I/O to validate read, write, append, and atomic write operations.

build: update Vite configuration for new storage modules

- Added new storage modules to the Vite build entry points.
- Updated external dependencies in the Rollup options.

chore(tests): enhance Vitest configuration for coverage reporting

- Configured Vitest to include coverage reporting with V8 provider.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yazawa",
+  "name": "vectordb",
   "version": "0.1.0",
   "type": "module",
   "license": "MIT",
@@ -14,18 +14,36 @@
     "./client": {
       "import": "./dist/client.js",
       "types": "./dist/client.d.ts"
+    },
+    "./cli": {
+      "import": "./dist/cli.js",
+      "types": "./dist/cli.d.ts"
+    },
+    "./storage/*": {
+      "import": "./dist/storage/*.js",
+      "types": "./dist/storage/*.d.ts"
     }
   },
   "packageManager": "bun@1.2.20",
   "sideEffects": false,
+  "bin": {
+    "vectordb": "./bin/vectordb.cjs"
+  },
+  "files": [
+    "dist",
+    "bin",
+    "README.md"
+  ],
   "scripts": {
-    "build": "vite build",
+    "build": "vite build && npm run types",
     "clean": "rimraf dist",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
     "typecheck": "tsc -p tsconfig.json --noEmit",
+    "types": "tsc -p tsconfig.json --emitDeclarationOnly",
     "test": "bun test",
+    "test:cov": "bun test --coverage",
     "cli": "bun run src/cli/main.tsx"
   },
   "devDependencies": {
