--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "packageManager": "bun@1.2.20",
   "sideEffects": false,
   "bin": {
-    "vectordb": "./bin/vectordb.cjs"
+    "vectordb": "bin/vectordb.cjs"
   },
   "files": [
     "dist",
