--- a/package.json
+++ b/package.json
@@ -62,7 +62,9 @@
     "tsup": "^8.5.0",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.39.1",
-    "vite-plugin-dts": "^4.5.4"
+    "vite": "^7.1.3",
+    "vite-plugin-dts": "^4.5.4",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "eslint-plugin-eslint-comments": "^3.2.0",
