--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
     "typecheck": "tsc -p tsconfig.json --noEmit",
-    "test": "bun test",
-    "test:cov": "bun test --coverage",
+    "test": "vitest",
+    "test:cov": "vitest run --coverage",
     "cli": "bun run src/cli/main.tsx"
   },
   "devDependencies": {
@@ -53,6 +53,7 @@
     "@types/react": "^19.1.10",
     "@typescript-eslint/eslint-plugin": "^8.39.1",
     "@typescript-eslint/parser": "^8.39.1",
+    "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
@@ -64,10 +65,10 @@
     "typescript-eslint": "^8.39.1",
     "vite": "^7.1.3",
     "vite-plugin-dts": "^4.5.4",
+    "eslint-plugin-eslint-comments": "^3.2.0",
     "vitest": "^3.2.4"
   },
   "dependencies": {
-    "eslint-plugin-eslint-comments": "^3.2.0",
     "ink": "^6.2.0",
     "ink-select-input": "^6.2.0",
     "ink-spinner": "^5.0.0",
