--- a/package.json
+++ b/package.json
@@ -63,9 +63,12 @@
     "@types/react": "^19.1.11",
     "@typescript-eslint/eslint-plugin": "^8.40.0",
     "@typescript-eslint/parser": "^8.40.0",
+    "@vitejs/plugin-react": "^5.0.1",
     "@vitest/coverage-v8": "^3.2.4",
+    "ajv": "^8.17.1",
     "eslint": "^9.34.0",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsdoc": "^54.1.1",
     "prettier": "^3.6.2",
@@ -75,7 +78,6 @@
     "typescript-eslint": "^8.40.0",
     "vite": "^7.1.3",
     "vite-plugin-dts": "^4.5.4",
-    "eslint-plugin-eslint-comments": "^3.2.0",
     "vitest": "^3.2.4"
   },
   "dependencies": {
