--- a/package.json
+++ b/package.json
@@ -10,27 +10,44 @@
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
+      "require": "./dist/index.cjs",
+      "default": "./dist/index.js"
     },
     "./client": {
       "types": "./dist/client/index.d.ts",
       "import": "./dist/client/index.js",
-      "require": "./dist/client/index.cjs"
+      "require": "./dist/client/index.cjs",
+      "default": "./dist/client/index.js"
     },
     "./cli": {
       "types": "./dist/cli/index.d.ts",
       "import": "./dist/cli/index.js",
-      "require": "./dist/cli/index.cjs"
+      "require": "./dist/cli/index.cjs",
+      "default": "./dist/cli/index.js"
     },
     "./http-server": {
       "types": "./dist/http-server/index.d.ts",
       "import": "./dist/http-server/index.js",
-      "require": "./dist/http-server/index.cjs"
+      "require": "./dist/http-server/index.cjs",
+      "default": "./dist/http-server/index.js"
+    },
+    "./config": {
+      "types": "./dist/config/index.d.ts",
+      "import": "./dist/config/index.js",
+      "require": "./dist/config/index.cjs",
+      "default": "./dist/config/index.js"
     },
     "./storage/*": {
       "types": "./dist/storage/*.d.ts",
       "import": "./dist/storage/*.js",
-      "require": "./dist/storage/*.cjs"
+      "require": "./dist/storage/*.cjs",
+      "default": "./dist/storage/*.js"
+    },
+    "./presets/config/*": {
+      "types": "./dist/presets/config/*.d.ts",
+      "import": "./dist/presets/config/*.js",
+      "require": "./dist/presets/config/*.cjs",
+      "default": "./dist/presets/config/*.js"
     }
   },
   "packageManager": "bun@1.2.20",
@@ -45,7 +62,6 @@
   ],
   "scripts": {
     "build": "vite build",
-    "postbuild": "node scripts/check-node-deps.mjs",
     "clean": "rimraf dist",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
